<resources>
    <string name="app_name">Smart Dock</string>
    <string name="none">None</string>
    <string name="move">Move</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="choose_dock_layout">Choose a Dock layout</string>
    <string name="phone">Phone</string>
    <string name="tablet">Tablet</string>
    <string name="manage_permissions">Manage permissions</string>
    <string name="required">Required</string>
    <string name="optional">Optional</string>
    <string name="display_over_other_apps">Display over other apps</string>
    <string name="display_over_other_apps_desc">Required to display the Dock, you cannot start the service without this</string>
    <string name="accessibility_service">Accessibility service</string>
    <string name="accessibility_service_desc">Use this to start and stop the Dock. Requires the above permission. If you get an error about <b>Restricted setting</b> click the Help button below</string>
    <string name="recent_apps">Recent apps</string>
    <string name="recent_apps_desc">Allows to display recent apps on the dock</string>
    <string name="notification_access">Notification access</string>
    <string name="notification_access_desc">Used to display notifications. If you get an error about <b>Restricted setting</b> click the Help button below</string>
    <string name="device_administrator">Device administrator</string>
    <string name="device_administrator_desc">Used to lock the screen. Disable before uninstalling</string>
    <string name="storage">Storage</string>
    <string name="storage_desc">Used to change the menu icon and event sounds</string>
    <string name="overlays_in_settings">Allow overlays on Settings</string>
    <string name="overlays_in_settings_desc">Used to keep the dock visible while the Settings app is open. This allows <b>any app</b> to display content on top of the Settings app not just the Dock. Must be enabled from Developer options</string>
    <string name="write_secure">Write secure settings</string>
    <string name="write_secure_desc">Needed for advanced settings. This is a special permission that must be granted with root or adb by running: \npm grant cu.axel.smartdock android.permission.WRITE_SECURE_SETTINGS</string>
    <string name="manage">Manage…</string>
    <string name="grant">Grant</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="appearance">Appearance</string>
    <string name="theme_title">Theme</string>
    <string name="dark">Dark</string>
    <string name="black">Black</string>
    <string name="transparent">Transparent</string>
    <string name="material_u">Material U</string>
    <string name="custom">Custom</string>
    <string name="theme_main_color_title">Main color</string>
    <string name="theme_main_color_summary">Defines main color for item backgrounds</string>
    <string name="choose_color">Choose color</string>
    <string name="opacity">Opacity</string>
    <string name="invalid_color">Invalid color</string>
    <string name="dock_layout">Layout</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="presets">Presets</string>
    <string name="icon_shape_title">Icon shape</string>
    <string name="circle">Circle</string>
    <string name="squircle">Squircle</string>
    <string name="system">System</string>
    <string name="round_dock">Rounded corners for the dock</string>
    <string name="single_line_labels">Single line for app names</string>
    <string name="tint_indicators_title">Tint running indicators</string>
    <string name="app_menu">App Menu</string>
    <string name="menu">Menu</string>
    <string name="menu_icon_uri_title">Menu icon</string>
    <string name="restore_menu_icon_title">Restore default menu icon</string>
    <string name="app_menu_fullscreen_title">Open App menu in full screen</string>
    <string name="app_menu_height_title">App menu height</string>
    <string name="app_menu_width_title">App menu width</string>
    <string name="num_columns_title">Number of columns</string>
    <string name="center_app_menu">Centered app menu</string>
    <string name="app_launch">App launch</string>
    <string name="launch_mode_title">Default app launch mode</string>
    <string name="standard">Standard</string>
    <string name="maximized">Maximized</string>
    <string name="portrait">Portrait</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="remember_launch_mode_title">Remember launch mode</string>
    <string name="remember_launch_mode_summary">Remember last launch mode used for every app</string>
    <string name="launch_games_fullscreen_title">Launch games in full screen</string>
    <string name="launch_games_fullscreen_summary">Launch apps detected as games in full screen by default</string>
    <string name="launch_new_instance_secondary_title">New window on secondary displays</string>
    <string name="launch_new_instance_secondary_summary">If supported by the app create a new window when launching on secondary displays</string>
    <string name="user_info">User info</string>
    <string name="user_name">Name</string>
    <string name="user_avatar">Avatar</string>
    <string name="allow_app_hiding">Allow hiding apps</string>
    <string name="hidden_apps">Hidden apps</string>
    <string name="choose_apps">Choose apps</string>
    <string name="dock">Dock</string>
    <string name="navigation">Navigation</string>
    <string name="enable_apps_btn">Apps menu</string>
    <string name="macos_category">MacOS Features</string>
    <string name="show_status_bar_title">Show Status Bar</string>
    <string name="enable_dock_zoom_title">Enable Dock Zoom</string>
    <string name="macos_icon_pack_title">MacOS Built-in Icon Pack</string>
    <string name="enable_nav_back_title">Back</string>
    <string name="enable_nav_home_title">Home</string>
    <string name="enable_nav_recents_title">Recents</string>
    <string name="long_press_action">Long press action</string>
    <string name="tap_to_set_long_action">Tap to configure long press/hover action</string>
    <string name="enable_nav_assist_title">Assistant</string>
    <string name="quick_settings">Quick settings</string>
    <string name="enable_notif_btn">Notifications</string>
    <string name="enable_qs_bluetooth_title">Bluetooth</string>
    <string name="enable_qs_battery_title">Battery</string>
    <string name="enable_qs_wifi_title">Wi-Fi</string>
    <string name="enable_qs_vol_title">Volume</string>
    <string name="enable_qs_date_title">Clock</string>
    <string name="enable_qs_pin_title">Pin</string>
    <string name="enable_qs_pin_summary">You can still pin/unpin the Dock by swiping down on it or using the keyboard shortcut</string>
    <string name="behaviour">Behaviour</string>
    <string name="enable_apps_btn_summary">You can still open/close the apps menu by swiping up/down on the dock</string>
    <string name="activation_method">Activation method</string>
    <string name="activation_method_summary">The method used to bring up the dock when hidden</string>
    <string name="swipe">Swipe/Hover</string>
    <string name="handle">Handle</string>
    <string name="handle_opacity">Handle opacity</string>
    <string name="handle_position">Handle position</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="auto_pin_title">Auto pin</string>
    <string name="auto_pin_summary">Configure auto pin</string>
    <string name="pin_startup">Pin on startup</string>
    <string name="pin_windowed">Pin on windowed apps</string>
    <string name="unpin_fullscreen">Unpin on full screen apps</string>
    <string name="running_apps_number_title">Number of running/recent apps to show</string>
    <string name="max_running_apps">Max recent apps</string>
    <string name="center_running_apps_title">Center running apps</string>
    <string name="dock_activation_area_title">Dock activation area</string>
    <string name="dock_activation_area_summary">The height of the invisible activation area at the bottom of the screen</string>
    <string name="desktop">Desktop</string>
    <string name="show_notes_title">Notes widget</string>
    <string name="default_apps">Default apps</string>
    <string name="app_browser_title">Web browser</string>
    <string name="app_files_title">Files</string>
    <string name="app_music_title">Music</string>
    <string name="app_movies_title">Movies</string>
    <string name="app_assistant_title">Assistant</string>
    <string name="app_clock_title">Clock</string>
    <string name="app_terminal_title">Terminal</string>
    <string name="app_rec_title">Screen recorder</string>
    <string name="choose_app">Choose an app</string>
    <string name="tap_to_set">Tap to set</string>
    <string name="keyboard">Keyboard</string>
    <string name="apps">Apps</string>
    <string name="general">General</string>
    <string name="enable_open_menu_title">Meta or Home to open the apps menu</string>
    <string name="enable_lock_desktop_title">Alt+L to lock the desktop</string>
    <string name="enable_open_settings_title">Alt+P to open settings</string>
    <string name="enable_open_music_title">Alt+M to open you default music app</string>
    <string name="enable_open_browser_title">Alt+B to open your default browser</string>
    <string name="enable_open_terminal_title">Alt+T to open terminal</string>
    <string name="enable_open_assist_title">Alt+A to launch your default assistant app</string>
    <string name="enable_open_rec_title">Alt+R to launch your default screen recorder app</string>
    <string name="enable_new_instance">Alt+Shift+N to launch a new window</string>
    <string name="enable_expand_notifications_title">Alt+Q to open quick settings</string>
    <string name="enable_ctrl_back_title">Right Ctrl acts as back button</string>
    <string name="enable_f10_title">F10 to toggle split screen</string>
    <string name="enable_toggle_pin_title">Alt+W to pin/unpin the dock</string>
    <string name="enable_menu_recents_title">Menu key to show recents</string>
    <string name="sounds">Sounds</string>
    <string name="please_note_that_you_must_prov">Please note that you must provide your own sounds</string>
    <string name="startup_sound_title">Startup sound</string>
    <string name="usb_sound_title">USB device connected sound</string>
    <string name="notification_sound_title">Notification sound</string>
    <string name="charge_sound_title">Charge sound</string>
    <string name="charge_complete_sound_title">Charge complete sound</string>
    <string name="notifications">Notifications</string>
    <string name="manage_service">Manage service</string>
    <string name="notification_timeout_title">Notification display time (in seconds)</string>
    <string name="show_ongoing_title">Show ongoing notifications</string>
    <string name="silence_current_title">Silence for current app</string>
    <string name="hot_corners">Hot Corners</string>
    <string name="advanced">Advanced</string>
    <string name="help_and_about">Help and about</string>
    <string name="a_launcher_for_android_x86_by_">A launcher for Android x86 by Axel358</string>
    <string name="help">Help</string>
    <string name="show_help_summary">Tap for help</string>
    <string name="contributors">Contributors</string>
    <string name="tap_to_see_the_list_of_great_p">Tap to see the list of great people that has contributed to Smart Dock</string>
    <string name="gnu_general_public_licence_v3">GNU General Public Licence v3.0</string>
    <string name="license">License</string>
    <string name="donate">Donate</string>
    <string name="support_the_project">Support the project</string>
    <string name="dock_background_opacity">Background opacity</string>
    <string name="override_dock_background_opacity">Override background opacity</string>
</resources>