<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <suraj.veera.launcher.preferences.AppChooserPreference
        android:title="@string/app_browser_title"
        android:key="app_browser"/>
    <suraj.veera.launcher.preferences.AppChooserPreference
        android:title="@string/app_files_title"
        android:key="app_files"/>
    <suraj.veera.launcher.preferences.AppChooserPreference
        android:title="@string/app_music_title"
        android:key="app_music"/>
    <suraj.veera.launcher.preferences.AppChooserPreference
        android:title="@string/app_movies_title"
        android:key="app_movies"/>
    <suraj.veera.launcher.preferences.AppChooserPreference
        android:title="@string/app_assistant_title"
        android:key="app_assistant"/>
    <suraj.veera.launcher.preferences.AppChooserPreference
        android:title="@string/app_clock_title"
        android:key="app_clock"/>
    <suraj.veera.launcher.preferences.AppChooserPreference
        android:title="@string/app_terminal_title"
        android:key="app_terminal"/>
    <suraj.veera.launcher.preferences.AppChooserPreference
        android:title="@string/app_rec_title"
        android:key="app_rec"/>
</PreferenceScreen>
