<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" 
	xmlns:app="http://schemas.android.com/apk/res-auto">

    <suraj.veera.launcher.preferences.PreferenceHeader
		android:icon="@drawable/ic_appearance"
		android:title="@string/appearance" 
		app:fragment="suraj.veera.launcher.fragments.AppearancePreferences" />
    <suraj.veera.launcher.preferences.PreferenceHeader
		android:icon="@drawable/ic_apps_menu" 
		app:fragment="suraj.veera.launcher.fragments.AppMenuPreferences"
		android:title="@string/app_menu"  />
	<suraj.veera.launcher.preferences.PreferenceHeader
        android:icon="@drawable/ic_dock"
        android:fragment="suraj.veera.launcher.fragments.DockPreferences"
        android:title="@string/dock" />
	<suraj.veera.launcher.preferences.PreferenceHeader
        android:icon="@drawable/ic_desktop"
        android:fragment="suraj.veera.launcher.fragments.DesktopPreferences"
        android:title="@string/desktop" />
    <suraj.veera.launcher.preferences.PreferenceHeader
        android:icon="@drawable/ic_star"
        android:fragment="suraj.veera.launcher.fragments.DefaultAppsPreferences"
        android:title="@string/default_apps" />
    <suraj.veera.launcher.preferences.PreferenceHeader
        android:icon="@drawable/ic_keyboard"
        android:fragment="suraj.veera.launcher.fragments.KeyboardPreferences"
        android:title="@string/keyboard" />
	<suraj.veera.launcher.preferences.PreferenceHeader
        android:icon="@drawable/ic_corners"
        android:fragment="suraj.veera.launcher.fragments.HotCornersPreferences"
        android:title="@string/hot_corners" />
	<suraj.veera.launcher.preferences.PreferenceHeader
        android:icon="@drawable/ic_notifications"
        android:fragment="suraj.veera.launcher.fragments.NotificationPreferences"
        android:title="@string/notifications" />
    <suraj.veera.launcher.preferences.PreferenceHeader
        android:icon="@drawable/ic_sounds"
        android:fragment="suraj.veera.launcher.fragments.SoundsPreferences"
        android:title="@string/sounds" />
    <suraj.veera.launcher.preferences.PreferenceHeader
        android:icon="@drawable/ic_advanced"
        android:fragment="suraj.veera.launcher.fragments.AdvancedPreferences"
        android:title="@string/advanced" />
    <suraj.veera.launcher.preferences.PreferenceHeader
        android:icon="@drawable/ic_info"
        android:fragment="suraj.veera.launcher.fragments.HelpAboutPreferences"
        android:title="@string/help_and_about" />

</PreferenceScreen>