<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/general">
        <Preference
            android:key="dock_layout"
            android:title="@string/dock_layout" />

        <ListPreference
            android:defaultValue="dark"
            android:entries="@array/themes"
            android:entryValues="@array/theme_values"
            android:key="theme"
            android:title="@string/theme_title" />

        <Preference
            android:key="theme_main_color"
            android:summary="@string/theme_main_color_summary"
            android:title="@string/theme_main_color_title" />

        <ListPreference
            android:defaultValue="circle"
            android:entries="@array/icon_shapes"
            android:entryValues="@array/icon_shapes_values"
            android:key="icon_shape"
            android:title="@string/icon_shape_title" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="single_line_labels"
            android:title="@string/single_line_labels" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/dock">
        <SwitchPreferenceCompat
            android:key="override_dock_background_alpha"
            android:title="@string/override_dock_background_opacity" />

        <cu.axel.smartdock.preferences.SliderPreference
            android:defaultValue="255"
            android:dependency="override_dock_background_alpha"
            android:key="dock_background_alpha"
            android:title="@string/dock_background_opacity" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="round_dock"
            android:title="@string/round_dock" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="tint_indicators"
            android:title="@string/tint_indicators_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="macOS Style">
        <ListPreference
            android:defaultValue="system"
            android:entries="@array/dock_themes"
            android:entryValues="@array/dock_theme_values"
            android:key="dock_theme_style"
            android:title="Dock Icon Theme" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="enable_zoom_effect"
            android:title="Enable Zoom Effect" />

        <EditTextPreference
            android:defaultValue="150"
            android:key="zoom_radius_dp"
            android:dependency="enable_zoom_effect"
            android:title="Zoom Radius (dp)"
            android:inputType="number" />

         <EditTextPreference
            android:defaultValue="1.5"
            android:key="dock_icon_max_scale"
            android:dependency="enable_zoom_effect"
            android:title="Max Zoom Scale (e.g. 1.5)"
            android:inputType="numberDecimal"/>

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="enable_status_bar"
            android:title="Enable Status Bar" />

    </PreferenceCategory>
</PreferenceScreen>
